Closed Bug 1277037 Opened 10 years ago Closed 9 years ago

MOZ_CRASH: Could not start cubeb stream for MSG.

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox49 --- affected
firefox53 --- fixed

People

(Reporter: rillian, Assigned: rillian)

References

Details

Attachments

(1 file)

Crash reporter shows a few failures of AudioCallbackDriver::StartStream(). This is only called from the fallible AsyncCubebTask::Run(), so plumbing through a error return seems reasonable.
Avoid crashing in the case that cubeb stream start fails and report an error instead. Review commit: https://reviewboard.mozilla.org/r/56660/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/56660/
Attachment #8758435 - Flags: review?(rjesup)
Assignee: nobody → giles
Attachment #8758435 - Flags: review?(rjesup) → review+
Comment on attachment 8758435 [details] Bug 1277037 - Make AudioCallbackDriver::StartStream fallible. https://reviewboard.mozilla.org/r/56660/#review53506 Ok, though I wish I knew which HW/drivers were crashing (can you add a search link to the bug for the reports?, though I doubt they tell us much)
Sorry, a crash report example is https://crash-stats.mozilla.com/report/index/cfffb88d-f60d-41c8-812f-d23302160601 found from the general MOZ_CRASH search from the dev-platform thread. i.e. https://is.gd/9eqQB3 As you might expect the stack trace isn't enlightening. I don't see a way to get audio driver info in the crash reports; it has been off-and-on since firefox 36 at least, and off again since 47. Try push wasn't green. Investigating whether the timeouts are caused by this patch somehow.
Rank: 15
Priority: -- → P1
Comment on attachment 8758435 [details] Bug 1277037 - Make AudioCallbackDriver::StartStream fallible. https://reviewboard.mozilla.org/r/56660/#review104668 ::: dom/media/GraphDriver.cpp:648 (Diff revision 3) > if (latencyPref) { > latency_frames = latencyPref.value(); > } else { > if (cubeb_get_min_latency(cubebContext, output, &latency_frames) != CUBEB_OK) { > NS_WARNING("Could not get minimal latency from cubeb."); > - return; > + return false; Oops, looks like I forgot to land this. I still see crashes with FF 50 and 52, so rebased on top of subsequent changes and added another failure return here.
Pushed by rgiles@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/150548e72f33 Make AudioCallbackDriver::StartStream fallible. r=jesup
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: