Bug 1277037 - Make AudioCallbackDriver::StartStream fallible. r=jesup

Avoid crashing in the case that cubeb stream start fails and report
an error instead.

MozReview-Commit-ID: 75M392POyHo